# tinyhumans

./: .gitignore  README.md  pyproject.toml  renderer.py  ruff.toml  tools.py  vposer.ipynb
notebooks/: vposer.ipynb
src/tinyhumans/: body_model.py  body_model_split.py  mesh.py  renderer.py  tensor_dict.py  tiny_types.py  tools.py  types.py
src/tinyhumans/datasets/prepare/: __init__.py  prepare.py  prepare_base.py  prepare_behave.py  prepare_grab.py  prepare_interact.py  prepare_intercap.py  prepare_omomo.py
src/tinyhumans/datatypes/: __init__.py  base_types.py  body_parametric_model_output.py  camera.py  joint_names.py  parametric_model_outputs.py  poses.py  scene_4d.py  shape_components.py  smpl_data.py
src/tinyhumans/models/: __init__.py  base_body_parametric_model.py  base_model.py  base_parametric_model.py  human_models.py  vposer_model.py
src/tinyhumans/models/vposer/: __init__.py  vposer_model.py
src/tinyhumans/modules/: __init__.py  hps_decoder.py  hps_layer.py  hps_transformer.py
src/tinyhumans/parsers/: __init__.py  mcs.py
src/tinyhumans/tools/: __init__.py  archives.py  image.py  logger.py  matrix_transforms.py  mcs.py  torch.py  video.py
src/tinyhumans/types/: __init__.py  base_types.py  pose_types.py  shape_types.py
src/tinyhumans/visualize/: __init__.py  colormaps.py  interactive_viewer.py  plot_meshes.py
tests/: test_hps_layer.py  test_hps_transformer.py  test_smpl_data.py  test_types.py
tests/fixtures/: subject-2.smpl
