[project]
name = "tinyhumans"
version = "0.1.0"
description = "Centralized library to deal with SMPL-family models"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.6.0",
    "plotly>=5.24.1",            # pytorch3d dependency for mesh viewer
    "tensordict>=0.10.0",
    "trimesh>=4.5.3",
    "pyrender>=0.1.45",
    "rich>=13.9.4",
    "setuptools>=75.7.0",
    "typing-extensions>=4.12.2",
    "gdown>=5.2.0",
    "tyro>=0.9.26",
    "viser>=1.0.0",
    "smplcodec>=2.0.2",
    "tinytools",
    "pytorch3d>=0.7.8",
]

[tool.uv]
no-build-isolation-package = ["pytorch3d"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
tensordict = { git = "https://github.com/pytorch/tensordict" }
tinytools = { git = "https://github.com/alex-bene/tinytools.git" }
# FOR DEVELOPMENT
## Use prebuilt pytorch3d wheels for development
pytorch3d = { index = "pytorch3d-wheels", group = "dev" }
## Use torch with cu124 for development
torch = [{ index = "pytorch-cu124", group = "dev" }]

## The pytorch3d dev wheel
[[tool.uv.index]]
name = "pytorch3d-wheels"
url = "https://miropsota.github.io/torch_packages_builder"
explicit = true
## The pytorch cuda124 dev wheel
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

## The extra packages for development
[dependency-groups]
# For dev, pin pytorch and pytorch3d to specific versions
dev = [
    "pytest>=8.3.4",
    "icecream>=2.1.7",
    "notebook>=7.3.2",
    # --- For Linux and Windows (where CUDA is available) ---
    "torch==2.6.0+cu124; sys_platform != 'darwin'",
    "pytorch3d==0.7.8+pt2.6.0cu124; sys_platform != 'darwin'",
    # --- For macOS ---
    "torch==2.6.0; sys_platform == 'darwin'",
    "pytorch3d==0.7.8+pt2.6.0cpu; sys_platform == 'darwin'",
]
