[project]
name = "tinyhumans"
version = "0.1.0"
description = "Centralized library to deal with SMPL-family models"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.6.0",
    "plotly>=5.24.1",            # pytorch3d dependency for mesh viewer
    "tensordict>=0.10.0",
    "trimesh>=4.5.3",
    "pyrender>=0.1.45",
    "rich>=13.9.4",
    "setuptools>=75.7.0",
    "typing-extensions>=4.12.2",
    "gdown>=5.2.0",
    "tyro>=0.9.26",
    "viser>=1.0.0",
    "smplcodec>=2.0.2",
    "tinytools",
    "pytorch3d>=0.7.8",
]

[dependency-groups]
cpu = [
    "torch==2.6.0",
    "pytorch3d==0.7.8+pt2.6.0cpu",
    { include-group = "pt3d_dev" },
]
cu124 = [
    "torch==2.6.0",
    "pytorch3d==0.7.8+pt2.6.0cu124",
    { include-group = "pt3d_dev" },
]
cu126 = [
    "torch==2.7.1",
    "pytorch3d==0.7.8+pt2.7.1cu126",
    { include-group = "pt3d_dev" },
]
cu128 = [
    "torch==2.7.1",
    "pytorch3d==0.7.8+pt2.7.1cu128",
    { include-group = "pt3d_dev" },
]
dev = ["pytest>=8.3.4", "icecream>=2.1.7", "notebook>=7.3.2"]
pt3d_dev = ["pytorch3d==0.7.8"]

[tool.uv]
no-build-isolation-package = ["pytorch3d"]
conflicts = [
    [
        { group = "cpu" },
        { group = "cu124" },
        { group = "cu126" },
        { group = "cu128" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", group = "cpu" },
    { index = "pytorch-cu124", group = "cu124" },
    { index = "pytorch-cu126", group = "cu126" },
    { index = "pytorch-cu128", group = "cu128" },
]
pytorch3d = { index = "pytorch3d-wheels", group = "pt3d_dev" }
tensordict = { git = "https://github.com/pytorch/tensordict" }
tinytools = { git = "https://github.com/alex-bene/tinytools.git" }

[[tool.uv.index]]
name = "pytorch3d-wheels"
url = "https://miropsota.github.io/torch_packages_builder"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
