[project]
name = "tinyhumans"
version = "0.1.0"
description = "Centralized library to deal with SMPL-family models"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.6.0",
    "plotly>=5.24.1",            # pytorch3d dependency for mesh viewer
    "tensordict>=0.10.0",
    "trimesh>=4.5.3",
    "pyrender>=0.1.45",
    "rich>=13.9.4",
    "setuptools>=75.7.0",
    "typing-extensions>=4.12.2",
    "gdown>=5.2.0",
    "tyro>=0.9.26",
    "viser>=1.0.0",
    "smplcodec>=2.0.2,<2.1.0",
    "tinytools",
    "pytorch3d>=0.7.8",
]

[project.optional-dependencies]
cpu = ["torch==2.8.0", "pytorch3d==0.7.8+pt2.8.0cpu"]
cu124 = ["torch==2.6.0", "pytorch3d==0.7.8+pt2.6.0cu124"]
cu126 = ["torch==2.8.0", "pytorch3d==0.7.8+pt2.8.0cu126"]
cu128 = ["torch==2.8.0", "pytorch3d==0.7.8+pt2.8.0cu128"]

[dependency-groups]
dev = ["pytest>=8.3.4", "icecream>=2.1.7", "notebook>=7.3.2"]

[tool.uv]
no-build-isolation-package = ["pytorch3d"]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cu124" },
        { extra = "cu126" },
        { extra = "cu128" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu124", extra = "cu124" },
    { index = "pytorch-cu126", extra = "cu126" },
    { index = "pytorch-cu128", extra = "cu128" },
]
pytorch3d = { index = "pytorch3d-wheels" }
tensordict = { git = "https://github.com/pytorch/tensordict" }
tinytools = { git = "https://github.com/alex-bene/tinytools.git" }

[[tool.uv.index]]
name = "pytorch3d-wheels"
url = "https://miropsota.github.io/torch_packages_builder"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
